fix(css): no margin on mobile

--- a/src/client/theme-default/styles/layout.css
+++ b/src/client/theme-default/styles/layout.css
@@ -9,7 +9,8 @@ body {
 }
 
 .theme {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 16px;
@@ -58,7 +59,7 @@ aside {
 
 @media screen and (max-width: 719px) {
   aside {
-    transition: transform .2s ease;
+    transition: transform 0.2s ease;
     transform: translateX(-100%);
   }
 
@@ -75,7 +76,7 @@ aside {
   display: none;
 }
 
-.sidebar-mask.sidebar-open{
+.sidebar-mask.sidebar-open {
   display: block;
 }
 
@@ -87,6 +88,12 @@ main {
 @media screen and (max-width: 959px) {
   main {
     margin-left: 16.4rem;
+  }
+}
+
+@media screen and (max-width: 719px) {
+  main {
+    margin-left: 0;
   }
 }
 
